// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Metadata/Individual Individual 1 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component
    ng-reflect-name="Prop Name"
  >
    <h3>
      Prop Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Joe
      </li>
      <li>
        Jane
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;

exports[`Storyshots Metadata/Individual Individual 2 1`] = `
<storybook-wrapper>
  <storybook-simple-token-component>
    <h3>
      Provider Name
    </h3>
    <p>
      Items:
    </p>
    <ul>
      
      <li>
        Jim
      </li>
      <li>
        Jill
      </li>
    </ul>
  </storybook-simple-token-component>
</storybook-wrapper>
`;
